<resources>
    <string name="app_name">Task List</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="action_sort_by_position">Позиция по возростанию</string>
    <string name="action_sort_by_position_desc">Позиция по убыванию</string>
    <string name="action_sort_by_type">Тип по возростанию</string>
    <string name="action_sort_by_type_desc">Тип по убыванию</string>
    <string name="action_sort_by_title">Заголовок по возростанию</string>
    <string name="action_sort_by_title_desc">Заголовок по убыванию</string>
    <string name="hint_enter_title">Введите заголовок</string>
    <string name="hint_enter_content">Введите содержимое</string>
    <string name="high_priority">Высокий приоритет</string>
</resources>