<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.tasklist.MainActivity">


    <item
        android:id="@+id/action_sort_by_position"
        android:orderInCategory="10"
        android:title="@string/action_sort_by_position"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_by_position_desc"
        android:orderInCategory="11"
        android:title="@string/action_sort_by_position_desc"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_by_title"
        android:orderInCategory="20"
        android:title="@string/action_sort_by_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_by_title_desc"
        android:orderInCategory="21"
        android:title="@string/action_sort_by_title_desc"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_by_type"
        android:orderInCategory="30"
        android:title="@string/action_sort_by_type"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_by_type_desc"
        android:orderInCategory="40"
        android:title="@string/action_sort_by_type_desc"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>