<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="100dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_flag"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="6dp"
            app:layout_constraintBottom_toBottomOf="@id/guideline1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_flag_24_red" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_edit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="6dp"
            app:layout_constraintBottom_toTopOf="@+id/ic_delete"
            app:layout_constraintEnd_toStartOf="@+id/ic_drag"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_edit_24" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_save"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="6dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/ic_delete"
            app:layout_constraintEnd_toStartOf="@+id/ic_drag"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_check_24" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_delete"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="6dp"
            app:layout_constraintBottom_toBottomOf="@id/guideline1"
            app:layout_constraintEnd_toStartOf="@+id/ic_drag"
            app:layout_constraintTop_toBottomOf="@+id/ic_edit"
            app:srcCompat="@drawable/ic_baseline_delete_24" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_cancel"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="6dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/guideline1"
            app:layout_constraintEnd_toStartOf="@+id/ic_drag"
            app:layout_constraintTop_toBottomOf="@+id/ic_save"
            app:srcCompat="@drawable/ic_baseline_cancel_24" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_arrow_up"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="6dp"
            app:layout_constraintBottom_toTopOf="@id/ic_drag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_drop_up_24" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_drag"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="6dp"
            app:layout_constraintBottom_toTopOf="@id/ic_arrow_down"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ic_arrow_up"
            app:srcCompat="@drawable/ic_baseline_drag_handle_24" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_arrow_down"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="6dp"
            app:layout_constraintBottom_toTopOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ic_drag"
            app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:gravity="center"
            android:maxLength="48"
            android:maxLines="2"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/guideline1"
            app:layout_constraintEnd_toStartOf="@+id/ic_edit"
            app:layout_constraintStart_toEndOf="@+id/ic_flag"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/full_names" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/title_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:gravity="center"
            android:hint="@string/hint_enter_title"
            android:maxLength="48"
            android:maxLines="2"
            android:textSize="26sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/guideline1"
            app:layout_constraintEnd_toStartOf="@+id/ic_edit"
            app:layout_constraintStart_toEndOf="@+id/ic_flag"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/full_names" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:gravity="fill_horizontal"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline1"
            tools:text=" qweeqw qwnvasmf vmsdfmads fasdhfshjfg weg lqwiefgasldfg jashdgfj,sadhfg as,hfg agfhgdj,fasf mjgwekuy gfajgjh ertwter wertwer sdf gd gsd gfsr et wert ew t"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/content_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:gravity="fill_horizontal"
            android:hint="@string/hint_enter_content"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline1"
            tools:text=" qweeqw qwnvasmf vmsdfmads fasdhfshjfg weg lqwiefgasldfg jashdgfj,sadhfg as,hfg agfhgdj,fasf mjgwekuy gfajgjh ertwter wertwer sdf gd gsd gfsr et wert ew t" />


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:text="@string/high_priority"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content_edit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>